# Gtest-with-Jenkins

./: CMakeLists.txt  Jenkinsfile  README.md  calc.c  calc.h  main.c  test_branches.c  test_branches.h  test_calc.cpp
